# serial

./: Cargo.toml
src/: error.rs  main.rs
src/args/: baud.rs  data_bits.rs  flow_control.rs  mod.rs  parity.rs  stop_bits.rs
